fix z-index for language selector

--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -68,6 +68,7 @@
 	right: 0.5em;
 	top: 1rem;
 	width: 6.5em;
+	z-index: 1;
 	@media screen and (min-width: 48.76em) {
 		top: 0.3em;
 		right: 0;
